add kitty, hypr, dolphin, and btop configs

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -34,10 +34,8 @@ input {
 gestures {
 	workspace_swipe=true
 }
-# hide active window
-#bind = $mainMod,X,exec,/home/michael/.scripts/hide_unhide_windows.sh h
-# show hide window 
-#bind = $mainMod,I,exec,/home/michael/.scripts/hide_unhide_windows.sh s
 bind = $mainMod, X, movetoworkspace, special:minimized
 bind = $mainMod, I, movetoworkspace, +0
 bind = $mainMod, C, togglespecialworkspace, minimized
+
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
