--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(1A1C1E)
-$foreground = rgb(F5F1F7)
-$color0 = rgb(414244)
-$color1 = rgb(10151D)
-$color2 = rgb(39223D)
-$color3 = rgb(076372)
-$color4 = rgb(8E4C7D)
-$color5 = rgb(06ADAD)
-$color6 = rgb(A9A1AD)
-$color7 = rgb(E8E3EB)
-$color8 = rgb(A29FA4)
-$color9 = rgb(151C26)
-$color10 = rgb(4C2E51)
-$color11 = rgb(098498)
-$color12 = rgb(BD66A7)
-$color13 = rgb(08E6E7)
-$color14 = rgb(E1D7E7)
-$color15 = rgb(E8E3EB)
+$background = rgb(121313)
+$foreground = rgb(E8E9EA)
+$color0 = rgb(3A3A3B)
+$color1 = rgb(462427)
+$color2 = rgb(383F4B)
+$color3 = rgb(8A3D41)
+$color4 = rgb(A7474C)
+$color5 = rgb(56926D)
+$color6 = rgb(8E9192)
+$color7 = rgb(D6D8D8)
+$color8 = rgb(959797)
+$color9 = rgb(5D3034)
+$color10 = rgb(4A5464)
+$color11 = rgb(B85156)
+$color12 = rgb(DF5F65)
+$color13 = rgb(73C291)
+$color14 = rgb(BDC1C2)
+$color15 = rgb(D6D8D8)
