--- a/.config/kitty/kitty-colors.conf
+++ b/.config/kitty/kitty-colors.conf
@@ -1,32 +1,32 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # /* wallust template - colors-kitty */
 
-foreground         #F5F1F7
-background         #1A1C1E
-cursor             #F5F1F7
+foreground         #E8E9EA
+background         #121313
+cursor             #E8E9EA
 
-active_tab_foreground     #1A1C1E
-active_tab_background     #F5F1F7
-inactive_tab_foreground   #F5F1F7
-inactive_tab_background   #1A1C1E
+active_tab_foreground     #121313
+active_tab_background     #E8E9EA
+inactive_tab_foreground   #E8E9EA
+inactive_tab_background   #121313
 
-active_border_color   #F5F1F7
-inactive_border_color #1A1C1E
-bell_border_color     #10151D
+active_border_color   #E8E9EA
+inactive_border_color #121313
+bell_border_color     #462427
 
-color0      #414244
-color1		#10151D
-color2		#39223D
-color3		#076372
-color4		#8E4C7D
-color5		#06ADAD
-color6		#A9A1AD
-color7		#E8E3EB
-color8		#A29FA4
-color9		#151C26
-color10		#4C2E51
-color11		#098498
-color12		#BD66A7
-color13		#08E6E7
-color14		#E1D7E7
-color15		#E8E3EB
+color0      #3A3A3B
+color1		#462427
+color2		#383F4B
+color3		#8A3D41
+color4		#A7474C
+color5		#56926D
+color6		#8E9192
+color7		#D6D8D8
+color8		#959797
+color9		#5D3034
+color10		#4A5464
+color11		#B85156
+color12		#DF5F65
+color13		#73C291
+color14		#BDC1C2
+color15		#D6D8D8
