--- a/.config/hypr/UserConfigs/UserSettings.conf
+++ b/.config/hypr/UserConfigs/UserSettings.conf
@@ -28,7 +28,7 @@ general {
   resize_on_border = true
    
   col.active_border = $color12 
-  col.inactive_border = $backgroundCol
+  col.inactive_border = $background
   
   layout = dwindle
 }
