--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -37,5 +37,9 @@ gestures {
 bind = $mainMod, X, movetoworkspace, special:minimized
 bind = $mainMod, I, movetoworkspace, +0
 bind = $mainMod, C, togglespecialworkspace, minimized
+bind = SUPER SHIFT, H, movewindow, l
+bind = SUPER SHIFT, L, movewindow, r
+bind = SUPER SHIFT, K, movewindow, u
+bind = SUPER SHIFT, J, movewindow, d 
 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
