updated nvim and some font/color corrections for hyr

--- a/.config/kitty/kitty-colors.conf
+++ b/.config/kitty/kitty-colors.conf
@@ -1,32 +1,32 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # /* wallust template - colors-kitty */
 
-foreground         #E8E9EA
-background         #121313
-cursor             #E8E9EA
+foreground         #F5F3F2
+background         #26272C
+cursor             #F5F3F2
 
-active_tab_foreground     #121313
-active_tab_background     #E8E9EA
-inactive_tab_foreground   #E8E9EA
-inactive_tab_background   #121313
+active_tab_foreground     #26272C
+active_tab_background     #F5F3F2
+inactive_tab_foreground   #F5F3F2
+inactive_tab_background   #26272C
 
-active_border_color   #E8E9EA
-inactive_border_color #121313
-bell_border_color     #462427
+active_border_color   #F5F3F2
+inactive_border_color #26272C
+bell_border_color     #5B4438
 
-color0      #3A3A3B
-color1		#462427
-color2		#383F4B
-color3		#8A3D41
-color4		#A7474C
-color5		#56926D
-color6		#8E9192
-color7		#D6D8D8
-color8		#959797
-color9		#5D3034
-color10		#4A5464
-color11		#B85156
-color12		#DF5F65
-color13		#73C291
-color14		#BDC1C2
-color15		#D6D8D8
+color0      #4B4C52
+color1		#5B4438
+color2		#604A3F
+color3		#515870
+color4		#82756D
+color5		#A0865E
+color6		#A9A6A3
+color7		#E8E5E3
+color8		#A2A19F
+color9		#7A5A4B
+color10		#806254
+color11		#6C7596
+color12		#AE9B92
+color13		#D6B27D
+color14		#E2DDD9
+color15		#E8E5E3
