--- a/.config/hypr/UserConfigs/ENVariables.conf
+++ b/.config/hypr/UserConfigs/ENVariables.conf
@@ -16,7 +16,7 @@ env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
-
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 # xwayland apps scale fix (useful if you are use monitor scaling)
 # see https://wiki.hyprland.org/Configuring/XWayland/
 # toolkit-specific scale
