--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(121313)
-$foreground = rgb(E8E9EA)
-$color0 = rgb(3A3A3B)
-$color1 = rgb(462427)
-$color2 = rgb(383F4B)
-$color3 = rgb(8A3D41)
-$color4 = rgb(A7474C)
-$color5 = rgb(56926D)
-$color6 = rgb(8E9192)
-$color7 = rgb(D6D8D8)
-$color8 = rgb(959797)
-$color9 = rgb(5D3034)
-$color10 = rgb(4A5464)
-$color11 = rgb(B85156)
-$color12 = rgb(DF5F65)
-$color13 = rgb(73C291)
-$color14 = rgb(BDC1C2)
-$color15 = rgb(D6D8D8)
+$background = rgb(26272C)
+$foreground = rgb(F5F3F2)
+$color0 = rgb(4B4C52)
+$color1 = rgb(5B4438)
+$color2 = rgb(604A3F)
+$color3 = rgb(515870)
+$color4 = rgb(82756D)
+$color5 = rgb(A0865E)
+$color6 = rgb(A9A6A3)
+$color7 = rgb(E8E5E3)
+$color8 = rgb(A2A19F)
+$color9 = rgb(7A5A4B)
+$color10 = rgb(806254)
+$color11 = rgb(6C7596)
+$color12 = rgb(AE9B92)
+$color13 = rgb(D6B27D)
+$color14 = rgb(E2DDD9)
+$color15 = rgb(E8E5E3)
