--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -6,8 +6,8 @@ standard_dialogs=default
 style=kvantum-dark
 
 [Fonts]
-fixed=@Variant(\0\0\0@\0\0\0 \0\x46\0i\0r\0\x61\0 \0\x43\0o\0\x64\0\x65\0 \0M\0\x65\0\x64\0i\0u\0m@(\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x39\x10)
-general="@Variant(\0\0\0@\0\0\0 \0\x46\0i\0r\0\x61\0 \0\x43\0o\0\x64\0\x65\0 \0M\0\x65\0\x64\0i\0u\0m@,\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x39\x10)"
+fixed=@Variant(\0\0\0@\0\0\0 \0\x46\0i\0r\0\x61\0 \0\x43\0o\0\x64\0\x65\0 \0M\0\x65\0\x64\0i\0u\0m@0\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x39\x10)
+general=@Variant(\0\0\0@\0\0\0 \0\x46\0i\0r\0\x61\0 \0\x43\0o\0\x64\0\x65\0 \0M\0\x65\0\x64\0i\0u\0m@0\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x39\x10)
 
 [Interface]
 activate_item_on_single_click=1
@@ -24,8 +24,11 @@ toolbutton_style=4
 underline_shortcut=1
 wheel_scroll_lines=3
 
+[PaletteEditor]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2-\0\0\x1\x81\0\0\x4\xa3\0\0\x3\x91\0\0\x2-\0\0\x1\x81\0\0\x4\xa3\0\0\x3\x91\0\0\0\0\x2\0\0\0\b\0\0\0\x2-\0\0\x1\x81\0\0\x4\xa3\0\0\x3\x91)
+
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x6\xe3\0\0\x5\x61\0\0\0\0\0\0\0\0\0\0\x6\xe3\0\0\x5\x61\0\0\0\0\x2\0\0\0\n\0\0\0\0\0\0\0\0\0\0\0\x6\xe3\0\0\x5\x61)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x6\xe3\0\0\x5\x61\0\0\0\0\0\0\0\0\0\0\x6\xe3\0\0\x5\x61\0\0\0\0\x2\0\0\0\b\0\0\0\0\0\0\0\0\0\0\0\x6\xe3\0\0\x5\x61)
 
 [Troubleshooting]
 force_raster_widgets=1
