--- a/.config/qt6ct/qt6ct.conf
+++ b/.config/qt6ct/qt6ct.conf
@@ -6,8 +6,8 @@ standard_dialogs=default
 style=kvantum-dark
 
 [Fonts]
-fixed="Fira Code Medium,12,-1,5,500,0,0,0,0,0,0,0,0,0,0,1,Regular"
-general="Fira Code Medium,14,-1,5,500,0,0,0,0,0,0,0,0,0,0,1,Regular"
+fixed="Fira Code Medium,16,-1,5,500,0,0,0,0,0,0,0,0,0,0,1,Regular"
+general="Fira Code Medium,16,-1,5,500,0,0,0,0,0,0,0,0,0,0,1,Regular"
 
 [Interface]
 activate_item_on_single_click=1
@@ -28,7 +28,7 @@ wheel_scroll_lines=4
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x5\xff\0\0\x3\xef\0\0\0\0\0\0\0\0\0\0\x5\xff\0\0\x3\xef\0\0\0\0\x2\0\0\0\n\0\0\0\0\0\0\0\0\0\0\0\x5\xff\0\0\x3\xef)
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x5\xff\0\0\x3\xef\0\0\0\0\0\0\0\0\0\0\x5\xff\0\0\x3\xef\0\0\0\0\x2\0\0\0\n\0\0\0\0\0\0\0\0\0\0\0\x5\xff\0\0\x3\xef)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x4\xcb\0\0\x3%\0\0\0\0\0\0\0\0\0\0\x4\xcb\0\0\x3%\0\0\0\0\x2\0\0\0\b\0\0\0\0\0\0\0\0\0\0\0\x4\xcb\0\0\x3%)
 
 [Troubleshooting]
 force_raster_widgets=1
