updated nvim plugins and some font settings

--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(1A1C1F)
-$foreground = rgb(E0E2F2)
-$color0 = rgb(404347)
-$color1 = rgb(1F2A3B)
-$color2 = rgb(383E5D)
-$color3 = rgb(613853)
-$color4 = rgb(4A526B)
-$color5 = rgb(757A9C)
-$color6 = rgb(7C81A4)
-$color7 = rgb(CACDE5)
-$color8 = rgb(8D90A0)
-$color9 = rgb(29384E)
-$color10 = rgb(4A527C)
-$color11 = rgb(824B6E)
-$color12 = rgb(626D8F)
-$color13 = rgb(9BA3D0)
-$color14 = rgb(A5ACDB)
-$color15 = rgb(CACDE5)
+$background = rgb(000102)
+$foreground = rgb(C5D6D2)
+$color0 = rgb(000102)
+$color1 = rgb(2B2E31)
+$color2 = rgb(283234)
+$color3 = rgb(48292B)
+$color4 = rgb(732322)
+$color5 = rgb(3B5953)
+$color6 = rgb(42675E)
+$color7 = rgb(A3BCB6)
+$color8 = rgb(72837F)
+$color9 = rgb(393D41)
+$color10 = rgb(354346)
+$color11 = rgb(603739)
+$color12 = rgb(992E2D)
+$color13 = rgb(4F766E)
+$color14 = rgb(58897D)
+$color15 = rgb(A3BCB6)
