--- a/.config/kitty/kitty-colors.conf
+++ b/.config/kitty/kitty-colors.conf
@@ -1,32 +1,32 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # /* wallust template - colors-kitty */
 
-foreground         #E0E2F2
-background         #1A1C1F
-cursor             #E0E2F2
+foreground         #C5D6D2
+background         #000102
+cursor             #C5D6D2
 
-active_tab_foreground     #1A1C1F
-active_tab_background     #E0E2F2
-inactive_tab_foreground   #E0E2F2
-inactive_tab_background   #1A1C1F
+active_tab_foreground     #000102
+active_tab_background     #C5D6D2
+inactive_tab_foreground   #C5D6D2
+inactive_tab_background   #000102
 
-active_border_color   #E0E2F2
-inactive_border_color #1A1C1F
-bell_border_color     #1F2A3B
+active_border_color   #C5D6D2
+inactive_border_color #000102
+bell_border_color     #2B2E31
 
-color0      #404347
-color1		#1F2A3B
-color2		#383E5D
-color3		#613853
-color4		#4A526B
-color5		#757A9C
-color6		#7C81A4
-color7		#CACDE5
-color8		#8D90A0
-color9		#29384E
-color10		#4A527C
-color11		#824B6E
-color12		#626D8F
-color13		#9BA3D0
-color14		#A5ACDB
-color15		#CACDE5
+color0      #000102
+color1		#2B2E31
+color2		#283234
+color3		#48292B
+color4		#732322
+color5		#3B5953
+color6		#42675E
+color7		#A3BCB6
+color8		#72837F
+color9		#393D41
+color10		#354346
+color11		#603739
+color12		#992E2D
+color13		#4F766E
+color14		#58897D
+color15		#A3BCB6
