--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -6,8 +6,8 @@ standard_dialogs=default
 style=kvantum
 
 [Fonts]
-fixed="JetBrainsMono Nerd Font,16,-1,5,50,0,0,0,0,0,Regular"
-general="JetBrainsMonoNL Nerd Font,18,-1,5,50,0,0,0,0,0,Regular"
+fixed="FiraCode Nerd Font Med,14,-1,5,57,0,0,0,0,0,Regular"
+general="FiraCode Nerd Font Med,16,-1,5,57,0,0,0,0,0,Regular"
 
 [Interface]
 activate_item_on_single_click=1
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x2\xde\0\0\x2\x62\0\0\0\0\0\0\0\0\0\0\x2\xde\0\0\x2\x62\0\0\0\0\x2\0\0\0\x6\0\0\0\0\0\0\0\0\0\0\0\x2\xde\0\0\x2\x62)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\x7f\0\0\x3\x16\0\0\0\0\0\0\0\0\0\0\x3\x7f\0\0\x3\x16\0\0\0\0\x2\0\0\0\b\0\0\0\0\0\0\0\0\0\0\0\x3\x7f\0\0\x3\x16)
 
 [Troubleshooting]
 force_raster_widgets=1
