--- a/.config/qt6ct/qt6ct.conf
+++ b/.config/qt6ct/qt6ct.conf
@@ -6,8 +6,8 @@ standard_dialogs=default
 style=kvantum
 
 [Fonts]
-fixed="JetBrainsMonoNL Nerd Font,16,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
-general="JetBrainsMonoNL Nerd Font,18,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
+fixed="FiraCode Nerd Font Mono Med,14,-1,5,500,0,0,0,0,0,0,0,0,0,0,1,Regular"
+general="FiraCode Nerd Font Mono Med,16,-1,5,500,0,0,0,0,0,0,0,0,0,0,1,Regular"
 
 [Interface]
 activate_item_on_single_click=1
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\x98\0\0\x2[\0\0\0\0\0\0\0\0\0\0\x3\x98\0\0\x2[\0\0\0\0\x2\0\0\0\x6\0\0\0\0\0\0\0\0\0\0\0\x3\x98\0\0\x2[)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x4\xcb\0\0\x3%\0\0\0\0\0\0\0\0\0\0\x4\xcb\0\0\x3%\0\0\0\0\x2\0\0\0\b\0\0\0\0\0\0\0\0\0\0\0\x4\xcb\0\0\x3%)
 
 [Troubleshooting]
 force_raster_widgets=1
