--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(000102)
-$foreground = rgb(C5D6D2)
-$color0 = rgb(000102)
-$color1 = rgb(2B2E31)
-$color2 = rgb(283234)
-$color3 = rgb(48292B)
-$color4 = rgb(732322)
-$color5 = rgb(3B5953)
-$color6 = rgb(42675E)
-$color7 = rgb(A3BCB6)
-$color8 = rgb(72837F)
-$color9 = rgb(393D41)
-$color10 = rgb(354346)
-$color11 = rgb(603739)
-$color12 = rgb(992E2D)
-$color13 = rgb(4F766E)
-$color14 = rgb(58897D)
-$color15 = rgb(A3BCB6)
+$background = rgb(17181E)
+$foreground = rgb(F6E0D9)
+$color0 = rgb(3E3F46)
+$color1 = rgb(041129)
+$color2 = rgb(46172B)
+$color3 = rgb(204468)
+$color4 = rgb(834754)
+$color5 = rgb(317089)
+$color6 = rgb(AC7D6E)
+$color7 = rgb(EACAC1)
+$color8 = rgb(A38D87)
+$color9 = rgb(051737)
+$color10 = rgb(5D1E3A)
+$color11 = rgb(2B5A8B)
+$color12 = rgb(AF5F70)
+$color13 = rgb(4195B7)
+$color14 = rgb(E5A693)
+$color15 = rgb(EACAC1)
