--- a/.config/kitty/kitty-colors.conf
+++ b/.config/kitty/kitty-colors.conf
@@ -1,32 +1,32 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # /* wallust template - colors-kitty */
 
-foreground         #C5D6D2
-background         #000102
-cursor             #C5D6D2
+foreground         #F6E0D9
+background         #17181E
+cursor             #F6E0D9
 
-active_tab_foreground     #000102
-active_tab_background     #C5D6D2
-inactive_tab_foreground   #C5D6D2
-inactive_tab_background   #000102
+active_tab_foreground     #17181E
+active_tab_background     #F6E0D9
+inactive_tab_foreground   #F6E0D9
+inactive_tab_background   #17181E
 
-active_border_color   #C5D6D2
-inactive_border_color #000102
-bell_border_color     #2B2E31
+active_border_color   #F6E0D9
+inactive_border_color #17181E
+bell_border_color     #041129
 
-color0      #000102
-color1		#2B2E31
-color2		#283234
-color3		#48292B
-color4		#732322
-color5		#3B5953
-color6		#42675E
-color7		#A3BCB6
-color8		#72837F
-color9		#393D41
-color10		#354346
-color11		#603739
-color12		#992E2D
-color13		#4F766E
-color14		#58897D
-color15		#A3BCB6
+color0      #3E3F46
+color1		#041129
+color2		#46172B
+color3		#204468
+color4		#834754
+color5		#317089
+color6		#AC7D6E
+color7		#EACAC1
+color8		#A38D87
+color9		#051737
+color10		#5D1E3A
+color11		#2B5A8B
+color12		#AF5F70
+color13		#4195B7
+color14		#E5A693
+color15		#EACAC1
