--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -37,6 +37,7 @@ windowrulev2 = workspace 2, class:^([Tt]horium-browser|[Cc]achy-browser)$
 windowrulev2 = workspace 4, class:^(com.obsproject.Studio)$
 windowrulev2 = workspace 5, class:^([Ss]team)$
 windowrulev2 = workspace 5, class:^([Ll]utris)$
+windowrulev2 = workspace 6, class:^([Vv]mware)$
 windowrulev2 = workspace 7, class:^([Dd]iscord|[Ww]ebCord|[Vv]esktop)$
 windowrulev2 = workspace 7, class:^([Ff]erdium)$
 windowrulev2 = workspace 7, class:^([Ww]hatsapp-for-linux)$
@@ -91,7 +92,7 @@ windowrulev2 = opacity 0.8 0.65, class:^([Tt]hunar|org.gnome.Nautilus)$
 windowrulev2 = opacity 0.7 0.6, class:^(pcmanfm-qt)$
 windowrulev2 = opacity 0.7 0.5, class:^(gedit|org.gnome.TextEditor|mousepad)$
 windowrulev2 = opacity 0.8 0.5, class:^(deluge)$
-windowrulev2 = opacity 0.65 0.5, class:^(Alacritty|kitty|kitty-dropterm)$ # Terminals
+windowrulev2 = opacity 0.75 0.5, class:^(Alacritty|kitty|kitty-dropterm|ghostty|.*tty.*)$ # Terminals
 windowrulev2 = opacity 0.8 0.5, class:^(VSCodium|codium-url-handler|code-oss)$
 windowrulev2 = opacity 0.9 0.8, class:^(nwg-look|qt5ct|qt6ct|[Yy]ad)$
 windowrulev2 = opacity 0.9 0.7, title:(Kvantum Manager)
