--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -45,3 +45,5 @@ bind = SUPER SHIFT, K, movewindow, u
 bind = SUPER SHIFT, J, movewindow, d 
 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESK
+exec-once = dbus-update-activation-environment --systemd HYPRLAND_INSTANCE_SIGNATURE
+#exec = hyprshade auto
