added low battery notification

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -47,3 +47,4 @@ bind = SUPER SHIFT, J, movewindow, d
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESK
 exec-once = dbus-update-activation-environment --systemd HYPRLAND_INSTANCE_SIGNATURE
 #exec = hyprshade auto
+exec-once = pidof -x LowBattery.sh || /home/michael/.config/hypr/scripts/LowBattery.sh
