--- a/.config/cava/config
+++ b/.config/cava/config
@@ -243,14 +243,14 @@
 # for wallust
 gradient = 1
 gradient_count = 8
-gradient_color_1 = '#404347'
-gradient_color_2 = '#383E5D'
-gradient_color_3 = '#613853'
-gradient_color_4 = '#757A9C'
-gradient_color_5 = '#CACDE5'
-gradient_color_6 = '#626D8F'
-gradient_color_7 = '#9BA3D0'
-gradient_color_8 = '#CACDE5'
+gradient_color_1 = '#3C3D3E'
+gradient_color_2 = '#2A2E30'
+gradient_color_3 = '#333839'
+gradient_color_4 = '#464C4C'
+gradient_color_5 = '#A6AAAA'
+gradient_color_6 = '#515859'
+gradient_color_7 = '#5D6566'
+gradient_color_8 = '#A6AAAA'
 
 
 [smoothing]
