--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(17181E)
-$foreground = rgb(F6E0D9)
-$color0 = rgb(3E3F46)
-$color1 = rgb(041129)
-$color2 = rgb(46172B)
-$color3 = rgb(204468)
-$color4 = rgb(834754)
-$color5 = rgb(317089)
-$color6 = rgb(AC7D6E)
-$color7 = rgb(EACAC1)
-$color8 = rgb(A38D87)
-$color9 = rgb(051737)
-$color10 = rgb(5D1E3A)
-$color11 = rgb(2B5A8B)
-$color12 = rgb(AF5F70)
-$color13 = rgb(4195B7)
-$color14 = rgb(E5A693)
-$color15 = rgb(EACAC1)
+$background = rgb(151617)
+$foreground = rgb(C6C9C9)
+$color0 = rgb(3C3D3E)
+$color1 = rgb(212426)
+$color2 = rgb(2A2E30)
+$color3 = rgb(333839)
+$color4 = rgb(3D4243)
+$color5 = rgb(464C4C)
+$color6 = rgb(464C4C)
+$color7 = rgb(A6AAAA)
+$color8 = rgb(747777)
+$color9 = rgb(2C3033)
+$color10 = rgb(383D40)
+$color11 = rgb(444B4D)
+$color12 = rgb(515859)
+$color13 = rgb(5D6566)
+$color14 = rgb(5D6566)
+$color15 = rgb(A6AAAA)
