--- a/.config/kitty/kitty-colors.conf
+++ b/.config/kitty/kitty-colors.conf
@@ -1,32 +1,32 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # /* wallust template - colors-kitty */
 
-foreground         #F6E0D9
-background         #17181E
-cursor             #F6E0D9
+foreground         #C6C9C9
+background         #151617
+cursor             #C6C9C9
 
-active_tab_foreground     #17181E
-active_tab_background     #F6E0D9
-inactive_tab_foreground   #F6E0D9
-inactive_tab_background   #17181E
+active_tab_foreground     #151617
+active_tab_background     #C6C9C9
+inactive_tab_foreground   #C6C9C9
+inactive_tab_background   #151617
 
-active_border_color   #F6E0D9
-inactive_border_color #17181E
-bell_border_color     #041129
+active_border_color   #C6C9C9
+inactive_border_color #151617
+bell_border_color     #212426
 
-color0      #3E3F46
-color1		#041129
-color2		#46172B
-color3		#204468
-color4		#834754
-color5		#317089
-color6		#AC7D6E
-color7		#EACAC1
-color8		#A38D87
-color9		#051737
-color10		#5D1E3A
-color11		#2B5A8B
-color12		#AF5F70
-color13		#4195B7
-color14		#E5A693
-color15		#EACAC1
+color0      #3C3D3E
+color1		#212426
+color2		#2A2E30
+color3		#333839
+color4		#3D4243
+color5		#464C4C
+color6		#464C4C
+color7		#A6AAAA
+color8		#747777
+color9		#2C3033
+color10		#383D40
+color11		#444B4D
+color12		#515859
+color13		#5D6566
+color14		#5D6566
+color15		#A6AAAA
